removed the slash before the images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="grid grid-cols-4 gap-20">
 <div class="product p1flex flex-col items-start border px-5">
-    <img src="/car.png" alt="" class="self-start">
+    <img src="car.png" alt="" class="self-start">
     <div>
     <p class="title">car</p>
     <p class="description">car pricture </p></div>
@@ -40,14 +40,14 @@
     <button class="btn py-3 px-4 bg-blue-700 text-white rounded mt-5 ">Add to Cart</button>
         </div>
            <div class="product p3 flex flex-col items-start border px-5">
-                        <img src="/dog.png" alt="" class="self-start">
+                        <img src="dog.png" alt="" class="self-start">
                         <div>
                         <p class="title">dog</p>
                         <p class="description">dog picture </p></div>
                         <button class="btn py-3 px-4 bg-blue-700 text-white rounded mt-5 ">Add to Cart</button>
                             </div>
                         <div class="product p4 flex flex-col items-start border px-5">
-                            <img src="/image copy 2.png" alt="" class="self-start">
+                            <img src="image copy 2.png" alt="" class="self-start">
                            <div> <p class="title">game</p>
                             <p class="description">col games</p></div>
                             <button class="btn py-3 px-4 bg-blue-700 text-white rounded mt-5 ">Add to Cart</button>
